--- a/FFMpegLib/FFMpegLib.csproj
+++ b/FFMpegLib/FFMpegLib.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>FFMpegLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,6 +45,7 @@
   <ItemGroup>
     <Compile Include="EncodedVideo.cs" />
     <Compile Include="Encoder.cs" />
+    <Compile Include="FFMpegInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickAudioEncodingCommands.cs" />
     <Compile Include="QuickVideoEncodingCommands.cs" />
