Improved download progress dialog

--- a/YouTubeLib/YouTubeLib.csproj
+++ b/YouTubeLib/YouTubeLib.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Download.cs" />
+    <Compile Include="DownloadEventArgs.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="Video.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
