--- a/B3/B3.csproj
+++ b/B3/B3.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DownloadDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DownloadDialog.Designer.cs">
+      <DependentUpon>DownloadDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="EncodingProgress.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\DownloadDialogModel.cs" />
+    <Compile Include="ViewModels\ViewModel.cs" />
+    <EmbeddedResource Include="DownloadDialog.resx">
+      <DependentUpon>DownloadDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EncodingProgress.resx">
       <DependentUpon>EncodingProgress.cs</DependentUpon>
     </EmbeddedResource>
