--- a/YouTubeLib/YouTubeLib.csproj
+++ b/YouTubeLib/YouTubeLib.csproj
@@ -35,7 +35,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,11 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Download.cs" />
+    <Compile Include="AbortableBackgroundWorker.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Download.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DownloadEventArgs.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="Video.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VideoQuality.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
