Added eta and speed for encoder. Did some structuring.

--- a/B3/B3.csproj
+++ b/B3/B3.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EncodingProgress.Designer.cs">
       <DependentUpon>EncodingProgress.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formatting.cs" />
     <Compile Include="Search.cs">
       <SubType>Form</SubType>
     </Compile>
