--- a/B3/B3.csproj
+++ b/B3/B3.csproj
@@ -153,7 +153,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Release ILMerge /ndebug /targetplatform:4.0 /out:B3Merge.exe B3.exe FFMpegLib.dll HtmlAgilityPack.dll Newtonsoft.Json.dll YouTubeLib.dll YouTubeExtractor.dll</PostBuildEvent>
+    <PostBuildEvent>if $(ConfigurationName) == Release ILMerge /ndebug /targetplatform:4.0 /out:Deploy\B3Merge.exe B3.exe FFMpegLib.dll HtmlAgilityPack.dll Newtonsoft.Json.dll YouTubeLib.dll YouTubeExtractor.dll Microsoft.WindowsAPICodePack.dll Microsoft.WindowsAPICodePack.Shell.dll Microsoft.WindowsAPICodePack.ShellExtensions.dll</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
