Moved ffmpeg to separate project

--- a/FFMpegLib/FFMpegLib.csproj
+++ b/FFMpegLib/FFMpegLib.csproj
@@ -69,6 +69,9 @@
     <Compile Include="QuickVideoEncodingCommands.cs" />
     <Compile Include="VideoFile.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ffmpeg.exe" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
